Fixed hr bars in FluxArchitectureWorkExample being left behind when scrolled horizontally. Most browsers support this but there are a few, especially with non-factory browsers on mobile, that don't.

--- a/src/styles/workExamples/FluxArchitectureWorkExample.less
+++ b/src/styles/workExamples/FluxArchitectureWorkExample.less
@@ -10,5 +10,10 @@
         border-bottom-right-radius: 5px;
         padding: 0px 5px;
         overflow-x: scroll;
+
+        hr {
+            position: sticky;
+            left: 0;
+        }
     }
 }
